|
Quick Lists
|
|
Bug ID:
|
6791168
|
|
Votes
|
0
|
|
Synopsis
|
Fix invalid code in bytecodeInterpreter that can cause gcc ICE
|
|
Category
|
hotspot:runtime_system
|
|
Reported Against
|
|
|
Release Fixed
|
hs15(b01),
7(b47) (Bug ID:2173043)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
4-Low
|
|
Related Bugs
|
|
|
Submit Date
|
07-JAN-2009
|
|
Description
|
please see
http://gcc.gnu.org/bugzilla/show_bug.cgi?id=38593
and
http://gcc.gnu.org/bugzilla/show_bug.cgi?id=38725
looks like current GCC versions accept invalid code:
"That's really a duplicate of PR38725: The code contains many lines of the form
goto *dispatch_table[opcode];
where dispatch_table[opcode] is of the type uintptr_t which is a typedef
to unsigned int. Writing
goto *(void*)dispatch_table[opcode];
instead makes the ICE disappear."
Posted Date : 2009-01-07 20:38:22.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
Fixed some compilation errors in gcc 4.3 also. See:
http://webrev.invokedynamic.info/coleenp/6791168
Posted Date : 2009-01-12 21:22:56.0
http://hg.openjdk.java.net/jdk7/hotspot-rt/hotspot/rev/52a431267315
Posted Date : 2009-01-13 22:47:25.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |