6791168: Fix invalid code in bytecodeInterpreter that can cause gcc ICE

Fix compilation errors from latest gcc in CC_INTERP including offending missing void* cast.

Reviewed-by: xlu